добавлена возможность становится виджетом

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="widget.css">
 </head>
+
 <body>
-    <h1>Погода</h1>
+        <h1>Погода</h1>
+    <div class="main">
     <div calss="left">
         <p>
             <label for="">Страна: </label>
@@ -19,14 +23,17 @@
             </select>
         </p>
         <p><label for="">Город: </label>
-        <div id="city">
-        </div>
+            <div id="city">
+
+            </div>
         </p>
     </div>
     <div class="right">
         <div id="weather"></div>
     </div>
+    </div>
     <script src="jq.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
