--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                         'Влажность: <b>' + data.main.humidity + '%</b><br>' +
                         'Давление: <b>' + Math.round(data.main.pressure * 0.00750063755419211 * 100) +
                         ' мм.рт.ст</b><br>' +
-                        'Видимость: <b>' + data.visibility / 1000 + ' км</b><br>';
+                        'Видимость: <b>' + data.visibility / 1000 + ' км</b><br>' +
+                        'Город:<b>' + data.name;
                     console.log(data.main);
                     $('#weather').html(out);
                 }
