добавлена возможность просмотра погоды на 5 дней вперед

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
             <p id="geolocation"></p>
 
+            <button onclick="getLocationWeather()">вывести погуду на 7 дней</button>
+            
 
             <p><label for="">Город: </label>
                 <div id="city">
@@ -42,6 +44,7 @@
     </div>
     <script src="jq.js"></script>
     <script src="script.js"></script>
+    
 </body>
 
 </html>
